# wrapitk

./: .project  CMakeLists.txt  ConfigureWrapping.cmake  CreateGccXMLInputs.cmake  CreateGenericSwigInterface.cmake  NightlyTests.md  ProjectHome.md  Release030.md  TypedefMacros.cmake  WrapITKBinaries.md  WrapITKConfig.cmake.in  WrapITKTypes.cmake  igenerator.py.in  wrapitk.spec
ConfigurationInputs/: WrapITKConfig.cmake.in
Documentation/Copyright/: Copyright.txt
ExternalProjects/ItkDolfin/: CMakeLists.txt  FindFEniCS.cmake
ExternalProjects/ItkDolfin/src/: itkDolfinImageFunction.h  itkDolfinImageFunctionSpace.h  itkImageToDolfinFunction.h  itkImageToDolfinFunction.txx
ExternalProjects/ItkDolfin/tests/: test-01.py
ExternalProjects/ItkDolfin/wrapping/: CMakeLists.txt  itkDolfin.swg  wrap_itkImageToDolfinFunction.cmake
ExternalProjects/PyBuffer/: CMakeLists.txt  FindNUMARRAY.cmake  itkPyBuffer.txx
Languages/: CMakeLists.txt  itk.i
Languages/Doc/: CMakeLists.txt  doxygen.config.in  itk_doxy2swig.py
Languages/Explicit/: CMakeLists.txt
Languages/GccXML/: CMakeLists.txt
Languages/Java/: CMakeLists.txt  itkJavaCommand.h  java.i  module_ext.i.in
Languages/Python/: CMakeLists.txt  itkBase.py  itkLazy.py  (+2 more)
Libraries/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/FFTW/: CMakeLists.txt
Modules/ItkVtk/: CMakeLists.txt
branches/maint/ExternalProjects/ItkDolfin/: CMakeLists.txt
branches/maint/ExternalProjects/ItkDolfin/src/: itkDolfinImageFunction.h  itkDolfinImageFunctionSpace.h
branches/maint/ExternalProjects/ItkDolfin/tests/: test-01.py
tags/0.3.0/Languages/Tcl/: CMakeLists.txt
tags/0.3.0/Languages/Tcl/TclBase/: CMakeLists.txt
tags/0.3.0/Languages/Tcl/Tests/: CMakeLists.txt
tags/0.3.0/Libraries/: CMakeLists.txt
tags/0.3.0/Libraries/Base/: wrap_itkImageToImageFilterB.cmake  wrap_itkVectorContainer.cmake
tags/0.3.0/Libraries/Calculators/: CMakeLists.txt
tags/0.3.0/Libraries/DeformableTransforms/: CMakeLists.txt
tags/0.3.0/Libraries/FFT/: wrap_itkMagnitudeAndPhaseToComplexImageFilter.cmake
tags/0.3.0/Libraries/Interpolators/: CMakeLists.txt
tags/0.3.0/Libraries/Morphology/: CMakeLists.txt  wrap_itkGrayscaleDilateImageFilter.cmake
tags/0.3.0/Libraries/Numerics/: wrap_itkGreyLevelCooccurrenceMatrixTextureCoefficientsCalculator.cmake  wrap_itkHistogram.cmake  wrap_itkHistogramToEntropyImageFilter.cmake  wrap_itkHistogramToIntensityImageFilter.cmake  wrap_itkHistogramToLogProbabilityImageFilter.cmake
tags/0.3.0/Libraries/Patented/: CMakeLists.txt
tags/0.3.0/Libraries/PixelMath/: CMakeLists.txt
tags/0.3.0/Libraries/SpatialObject/: CMakeLists.txt
tags/0.3.0/Libraries/VXLNumerics/: CMakeLists.txt
trunk/: CMakeLists.txt  ConfigureWrapping.cmake  CreateGenericSwigInterface.cmake  TypedefMacros.cmake  WrapITKConfig.cmake.in  WrapITKTypes.cmake  igenerator.py.in
trunk/ExternalProjects/ItkDolfin/: CMakeLists.txt  FindFEniCS.cmake
trunk/ExternalProjects/ItkDolfin/src/: itkDolfinImageFunction.h  itkDolfinImageFunctionSpace.h  itkImageFunctionSpace.h  itkImageToDolfinFunction.h  itkImageToDolfinFunction.txx
trunk/ExternalProjects/ItkDolfin/tests/: test-01.py
trunk/ExternalProjects/ItkDolfin/wrapping/: CMakeLists.txt  wrap_itkImageToDolfinFunction.cmake
trunk/ExternalProjects/ItkVtkGlue/Wrapping/: CMakeLists.txt
trunk/ExternalProjects/PyBuffer/: CMakeLists.txt  FindNUMARRAY.cmake  itkPyBuffer.h  itkPyBuffer.txx
trunk/Languages/: CMakeLists.txt  itk.i
trunk/Languages/Doc/: CMakeLists.txt  doxygen.config.in  itk_doxy2swig.py
trunk/Languages/GccXML/: CMakeLists.txt
trunk/Languages/Java/: CMakeLists.txt  java.i  module_ext.i.in
trunk/Languages/Java/JavaBase/: CMakeLists.txt
trunk/Languages/Java/Tests/: BinaryDilateImageFilter.java  BinaryErodeImageFilter.java  BinaryThresholdImageFilter.java  CMakeLists.txt  MeanImageFilter.java  MedianImageFilter.java  SigmoidImageFilter.java  ThresholdImageFilter.java
trunk/Languages/Java/Tests/notYetUsable/: DicomSliceRead.java
trunk/Languages/Python/: CMakeLists.txt  WrapITKBuildOptionsPython.py.in  itk.py  itkTemplate.py  itkdata.py  itktesting.py  python.i
trunk/Languages/Python/PyBase/: CMakeLists.txt
trunk/Languages/Python/PyUtils/: itkPyImageFilter.h  itkPyImageFilter.txx
trunk/Languages/Python/Tests/: AntiAliasBinaryImageFilter.py  BinaryDilateImageFilter.py  BinaryErodeImageFilter.py  CMakeLists.txt  CannyEdgeDetectionImageFilter.py  CastImageFilter.py  CurvatureFlowImageFilter.py  GeodesicActiveContourImageFilter.py  MeanImageFilter.py  MedianImageFilter.py  ResampleImageFilter.py  SmoothingRecursiveGaussianImageFilter.py  StrelFromImageGrayscaleDilateImageFilter.py  TestDirectory.py  TestObject.py  WatershedSegmentation1.py  exclude-filters.txt  extras.py  filterCoverage.py  findEmptyClasses.py  findSegfaults.py  module2module.py  returnedTypeCoverage.py  template.py  typemaps.py  wrappingCoverage.py
trunk/Languages/Python/itkExtras/: __init__.py
trunk/Languages/Ruby/: CMakeLists.txt
trunk/Languages/Ruby/PyUtils/: itkPyCommand.h
trunk/Languages/Ruby/RbBase/: CMakeLists.txt
trunk/Languages/SwigInterface/: CMakeLists.txt  igenerator.py.in
trunk/Languages/SwigInterface/pygccxml-0.8.2/pygccxml/parser/: directory_cache.py
trunk/Languages/SwigInterface/pygccxml-1.0.0/pygccxml/declarations/: type_visitor.py
trunk/Languages/SwigInterface/pygccxml-1.0.0/unittests/: results.txt
trunk/Languages/Tcl/: CMakeLists.txt  itkTclAppInit.cxx  itkdata.tcl  itktesting.tcl
trunk/Languages/Tcl/TclBase/: CMakeLists.txt
trunk/Languages/Tcl/Tests/: BinaryErodeImageFilter.tcl  BinaryThresholdImageFilter.tcl  CMakeLists.txt  CannyEdgeDetectionImageFilter.tcl  CurvatureAnisotropicDiffusionImageFilter.tcl  CurvatureFlowImageFilter.tcl  DicomSliceRead.tcl  GradientAnisotropicDiffusionImageFilter.tcl  ImageRegistration4.tcl  ListAll.tcl  MeanImageFilter.tcl  MedianImageFilter.tcl  SigmoidImageFilter.tcl  VoronoiSegmentation.tcl  randomImage.tcl  testObject.tcl
trunk/Modules/ItkVtk/: CMakeLists.txt  itkvtk.swg
wiki/: NightlyTests.wiki  Release030.wiki  WrapITKBinaries.wiki
(+347 files in other folders)
