PROJECT(ItkDolfin)
INCLUDE(CPack)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.2 FATAL_ERROR)

# TODO, for now we assume that FEniCS is installed
#SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
#FIND_PACKAGE( FEniCS )
#INCLUDE_DIRECTORIES( ${FENICS_DIR} )

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

# wrapping
IF(BUILD_WRAPPERS)
   ADD_SUBDIRECTORY(wrapping)
ENDIF(BUILD_WRAPPERS)
