
FIND_PACKAGE(VTK REQUIRED)
LINK_DIRECTORIES(${VTK_LIBRARY_DIRS})

SET(WRAPPER_LIBRARY_GROUPS
  itkImageToVTKImageFilter
  itkVTKImageToImageFilter
)

SET(WRAPPER_LIBRARY_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/src ${VTK_INCLUDE_DIRS})

WRAP_LIBRARY(ItkVtk)

SET(WRAPPER_LIBRARY_DEPENDS Base SimpleFilters)
SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKBasicFilters vtkImaging vtkFiltering)
SET(WRAPPER_SWIG_LIBRARY_FILES itkvtk.swg)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
END_WRAP_LIBRARY()

