PROJECT(PyBuffer)
FIND_PACKAGE(WrapITK REQUIRED)

# Deal with numarray package  Options
SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
FIND_PACKAGE( NUMARRAY )

INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )

WRAP_LIBRARY("BufferConversion" Python)

  SET(WRAPPER_LIBRARY_DEPENDS Base)
  SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
    SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkPyBuffer.swg")

  WRAPPER_LIBRARY_CREATE_WRAP_FILES()
END_WRAP_LIBRARY()

